segunda_pre_entrega

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <label for="nomb">usuario:</label>
                 <input type="text" name="nomb" id="username" title="nombre" >
                 <label for="contraseña">password</label>
-                <input type="number" name="passw" id="pass" title="pasword" >
+                <input type="password" name="passw" id="pass" title="pasword" >
                 <div>
                     <button class="btn btn-primary"type="submit" id="botonsubmit"> ingresar</button>
                 <!-- <input type="submit" value="Enviar" > -->
