--- a/metod.html
+++ b/metod.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/metod.js" type="module"></script>
+    <script src="scripts/metod.js" type="module"></script>
     <link href="css/styles.css" rel="stylesheet" />
 
     
