--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
             </div>
         </section>
         <div>
-            <form action=""  id="formulario">
-                <label for="nomb">usuario:</label>
-                <input type="text" name="nomb" id="username" title="nombre" >
-                <label for="contraseña">password</label>
-                <input type="password" name="passw" id="pass" title="pasword" >
+            <form action=""  id="formularioguard">
+                <label for="nombre">usuario guardado:</label>
+                <input type="text" name="nomb" id="usernames" title="nombre" >
+                <label for="contra">password guardado</label>
+                <input type="password" name="passw" id="passw" title="pasword" >
                 <div>
-                    <button class="btn btn-primary"type="submit" id="botonsubmit"> ingresar</button>
-                <!-- <input type="submit" value="Enviar" > -->
+                    <button class="btn btn-primary"type="submit" id="botonbusca"> ingresando</button>
+                    <button class="btn btn-primary" > <a href="login.html" style="color:rgb(23, 66, 158)">registrarse</a></button>
                 </div>
-                <h4 id="error" style="color: red"></h4>
+                <h4 id="error1" style="color: rgb(23, 66, 158)"></h4>
             </form>
         </div>
         
