--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </section>
         <div>
             <form action=""  id="formularioguard">
-                <label for="nombre">usuario guardado:</label>
+                <label for="nombre">usuario :</label>
                 <input type="text" name="nomb" id="usernames" title="nombre" >
                 <label for="contra">password guardado</label>
                 <input type="password" name="passw" id="passw" title="pasword" >
                 <div>
-                    <button class="btn btn-primary"type="submit" id="botonbusca"> ingresando</button>
+                    <button class="btn btn-primary" type="submit" id="botonbusca" > ingresar</button>
                     <button class="btn btn-primary" > <a href="login.html" style="color:rgb(23, 66, 158)">registrarse</a></button>
                 </div>
                 <h4 id="error1" style="color: rgb(23, 66, 158)"></h4>
