--- a/metod.html
+++ b/metod.html
@@ -52,14 +52,17 @@
                 <li>
                 <label for="nomb">nombre</label>
                 <input type="text" name="nomb" id="resnombre" title="nombre" >
+                <h4 id="nombreval" style=" color:rgb(22, 85, 85)"></h4>
                 </li><br>
                 <li>
-                <label for="nomb">apellido</label>
+                <label for="nomb">apellido</label>    
                 <input type="text" name="nomb" id="resapellido" title="apellido" >
+                <h4 id="apellidoval" style=" color:rgb(22, 85, 85)"></h4>
                 </li><br>
                 <li>
                 <label for="nomb">documento</label>
                 <input type="number" name="nomb" id="resdoc" title="doc" >
+                <h4 id="documentoval" style=" color:rgb(22, 85, 85)"></h4>
                 </li><br>
                 
                 <div>
