--- a/login.html
+++ b/login.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- librerias -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- proyecto -->
     <script src="scripts/logueo.js" type="module"></script>
     <link href="css/styles.css" rel="stylesheet" />
     <title>Document</title>
@@ -13,7 +19,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Start </a>
+            <a class="navbar-brand" href="index.html">Start </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -48,9 +54,18 @@
             <div>
                 <button class="btn btn-primary"type="submit" id="botonsubmit"> ingresar</button>
             <!-- <input type="submit" value="Enviar" > -->
+                
             </div>
 
             <h4 id="error" style="color: red"></h4>
+        </form>
+
+    </div>
+    <div>
+        <form action=""  id="eliminar2" >
+            <label for="nomb">usuario:</label>
+            <input type="text" name="nomb" id="username2" title="nombre" >
+            <button type="submit" id="eliminar">eliminar cuenta</button>
         </form>
     </div>
     
