--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <input type="password" name="passw" id="passw" title="pasword" >
                 <div>
                     <button class="btn btn-primary" type="submit" id="botonbusca" > ingresar</button>
-                    <button class="btn btn-primary" > <a href="login.html" style="color:rgb(23, 66, 158)">registrarse</a></button>
+                    <a class= "btn btn-primary"href="registro.html">registrarse</a>
                 </div>
                 <h4 id="error1" style="color: rgb(23, 66, 158)"></h4>
             </form>
