--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </section>
         <div>
-            <form action=""  id="formularioguard">
+            <form action=""  id="FormSesion">
                 <label for="nombre">usuario :</label>
                 <input type="text" name="nomb" id="usernames" title="nombre" >
                 <label for="contra">password :</label>
@@ -84,7 +84,7 @@
         <!-- Projects-->
         <section class="projects-section bg-light" id="datos">
             <div id="datos">
-                <div id="mensajecarga"></div>
+                <div id="MensajeCarga"></div>
             </div>
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
