--- a/registro.html
+++ b/registro.html
@@ -19,7 +19,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
      <!-- proyecto -->
-     <script src="scripts/logueo.js" type="module"></script>
+     <script src="scripts/Registro.js" type="module"></script>
      <link href="css/styles1.css" rel="stylesheet" />
     <title>Document</title>
 </head>
@@ -35,12 +35,12 @@
                 <h1 class="fst-italic lh-1 mb-4">su viaje lo espera</h1>
                 <p class="mb-5">viajes a todas partes del mundo, estamos mejorando para ud</p>
                 
-                <form id="form" data-sb-form-api-token="API_TOKEN">
+                <form id="FormRegistro" data-sb-form-api-token="API_TOKEN">
                     <!-- Email address input-->
                     <div class="row input-group-newsletter">
                         <div class="col"><input class="form-control" id="username" type="text" placeholder="nombre de usuario..." aria-label="nombre de usuario..." /></div>
                         <div class="col"><input class="form-control" id="pass" type="password" placeholder="ingrese password..." aria-label="ingrese password..." /></div>
-                        <div class="col-auto"> <button class="btn btn-primary"type="submit" id="botonsubmit">regístrese</button></div>
+                        <div class="col-auto"> <button class="btn btn-primary"type="submit" id="BtnRegistro">regístrese</button></div>
                     </div>
                     
                     <p class="mb-5">si ya tiene una cuanta ingrese<a class= "btn btn-primary"href="index.html">aqui</a> </p>
