--- a/Reservas.html
+++ b/Reservas.html
@@ -21,6 +21,7 @@
      <!-- proyecto -->
      <script src="scripts/reserva.js" type="module"></script>
      <link href="css/styles1.css" rel="stylesheet" />
+     <link href="css/stylesmain.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
